# Chess-Haskell

./: HASKHELL.cabal  README.md  stack.yaml
app/: ChessGameExe.hs
examples/Chess/: chessA.stdin  chessA.stdout  chessB.stdin  chessB.stdout  chessC.stdin  chessC.stdout
src/: Board.hs  Client.hs  Pieces.hs  chessGame.hs
test/: Spec.hs
