cabal-version:      3.0


name:               Haskhell
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Simith Bhojani Arya Girisha Rao
maintainer:         sb4417@g.rit.edu
category:           Game
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common common-stanza
    build-depends:      base >= 4.15 && < 5, array, 
                        bytestring, store, tasty, tasty-hunit, 
                        containers, Diff, directory, process,
                        network
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
      DeriveAnyClass, MonoLocalBinds, DeriveGeneric, ImportQualifiedPost

library
  import:
      common-stanza
  exposed-modules:
      ChessGame, Board, Pieces
  hs-source-dirs:
      src

common common-exe-stanza
  import:
      common-stanza
  build-depends:
      Haskhell

executable chessgame
    import:           common-exe-stanza
    main-is:          ChessGameExe.hs
    other-modules:    Board, Pieces
    hs-source-dirs:   app

test-suite test-suite
  import: common-exe-stanza
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test


